fix(focus-styles): high contrast on chromium edge

--- a/projects/ng-aquila/src/shared-styles/mixins.scss
+++ b/projects/ng-aquila/src/shared-styles/mixins.scss
@@ -12,6 +12,8 @@ $border-size: nx-border-size(xs);
 
   @media screen and (-ms-high-contrast: active) {
     box-shadow: 0 0 0 2px background, 0 0 0 6px windowText;
+    outline: 4px solid CanvasText;    // Chromium Edge
+    outline-offset: 2px;              // Chromium Edge
   }
 }
 
@@ -20,6 +22,7 @@ $border-size: nx-border-size(xs);
 
   @media screen and (-ms-high-contrast: active) {
     box-shadow: 0 0 0 2px windowText;
+    border: 1px solid highlight;    // Chromium Edge
   }
 }
 
@@ -27,7 +30,9 @@ $border-size: nx-border-size(xs);
   @include var(box-shadow, focus-inset-box-shadow);
 
   @media screen and (-ms-high-contrast: active) {
-    box-shadow: inset 0 0 0 4px windowText, inset 0 0 0 6px background;
+    // box-shadow: inset 0 0 0 4px windowText, inset 0 0 0 6px background;
+    border: 4px solid windowText;
+    border: 4px solid CanvasText;     // Chromium Edge
   }
 }
 
